# reservoirs_bot

./: Dockerfile  Pipfile  README.md  bot.py  docker-compose.yaml  env.example  pyproject.toml  requirements.txt
.github/workflows/: main.yml
bot/: config.py  markups.py  utils.py
bot/handlers/: common.py  water_situation.py
db/: schemas.py
services/: api_handlers.py  client.py  plotter.py  schemas.py
utils/: plotter.py
